--- a/second.html
+++ b/second.html
@@ -1,7 +1,7 @@
 <head> <link rel="stylesheet" href="style.css">
 <html>
   <head>
-  </head>
+    <head>
   <body>
     <ul>
       <li> <a href="index.html"> Home </a></li>
@@ -27,4 +27,3 @@
       
            
       <iframe width="392" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/n1qxX-iuUh1FWtES3Ex26Ch5D4bWKyT6zKbg5CFt9V9/embed?nosource"></iframe>"
-        </head>
