--- a/second.html
+++ b/second.html
@@ -1,5 +1,5 @@
-<head> <link rel="stylesheet" href="style.css">
 <html>
+<head> <link rel="stylesheet" href="secondstyle.css">
   <head>
   </head>
   <body>
