--- a/second.html
+++ b/second.html
@@ -1,5 +1,5 @@
 <html>
-<head> <link rel="stylesheet" href="Secondstyle.css">
+<head> <link rel="stylesheet" href="secondStyle.css">
   </html>
   </head>
   <body>
