--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <head> <link rel="stylesheet" href="style.css">
 <html>
   <head>
+    <ul>
+      <li> <a href="index.html"> Home </a></li>
+      <li> <a href="second.html"> Apps </a></li>
   </head>
   <center>
   <h3> Krishna Pegadaraju </h3>
