--- a/index.html
+++ b/index.html
@@ -2,7 +2,11 @@
 <head> <link rel="stylesheet" href="style.css">
   <head>
     <body>
-  
+  <ul>
+      <li> <a href="index.html"> Home </a></li>
+      <li> <a href="second.html"> Apps </a></li>
+    
+    </ul>
   </head>
   <center>
   <h3> Krishna Pegadaraju </h3>
