--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
-<head> <link rel="stylesheet" href="style.css">
+<head> <link rel="stylesheet" href="secondStyle.css">
   <head>
     <body>
   <ul>
