--- a/index.html
+++ b/index.html
@@ -1,13 +1,12 @@
-<html>
+<!DOCTYPE html>
 <head> <link rel="stylesheet" href="secondStyle.css">
-  <head>
+</head>
     <body>
   <ul>
       <li> <a href="index.html"> Home </a></li>
       <li> <a href="second.html"> Apps </a></li>
     
     </ul>
-  </head>
   <center>
   <h3> Krishna Pegadaraju </h3>
     <br>
